@@ -72,6 +72,8 @@ BerliOS Bugs are marked with (BerliOS #XXXX).
 * Rename _pam_aconf.h.in to config.h (kukuk)
 * pam_unix: Don't ignore pam_get_item return value (kukuk)
 * pam_userdb: Fix regression - crash when crypt param not specified (t8m)
+* libpam: Remove pam_authenticate_secondary stub (kukuk)
+* Use autoconf/automake/libtool (kukuk)
 
 0.80: Wed Jul 13 13:23:20 CEST 2005
 * pam_tally: test for NULL data before dereferencing them (t8m)
